# ProjektStrontium

V0.1/: CMakeLists.txt  NeuralNet.cpp  NeuralNet.hpp  Neuron.cpp  Neuron.hpp  a.out  main.cpp  source_code.cpp
